--- a/svice-frontend/svice/package.json
+++ b/svice-frontend/svice/package.json
@@ -19,7 +19,7 @@
     "reactstrap": "8.0.1"
   },
   "scripts": {
-    "start": "NODE_PATH=./src react-scripts start",
+    "start": "cross-env NODE_PATH=./src react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-export-default-from": "^7.8.3",
+    "cross-env": "^7.0.0",
     "dotenv": "^8.2.0"
   }
 }
