--- a/svice-backend/svice/composer.json
+++ b/svice-backend/svice/composer.json
@@ -13,7 +13,9 @@
         "fruitcake/laravel-cors": "^1.0",
         "laravel/framework": "^6.2",
         "laravel/passport": "^8.2",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "laravelista/lumen-vendor-publish": "^6.0",
+        "owen-it/laravel-auditing": "^9.3"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
