--- a/svice-frontend/svice/package.json
+++ b/svice-frontend/svice/package.json
@@ -15,11 +15,14 @@
     "react-bootstrap-switch": "15.5.3",
     "react-datetime": "2.16.3",
     "react-dom": "16.8.6",
+    "react-redux": "^7.1.3",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
     "react-scripts": "3.0.1",
     "reactjs-localstorage": "0.0.8",
-    "reactstrap": "8.0.1"
+    "reactstrap": "8.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "cross-env NODE_PATH=./src react-scripts start",
