--- a/svice-frontend/svice/package.json
+++ b/svice-frontend/svice/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.1.3",
     "react-router": "5.0.1",
     "react-router-dom": "5.0.1",
+    "react-router-guards": "^1.0.1",
     "react-scripts": "3.0.1",
     "reactjs-localstorage": "0.0.8",
     "reactstrap": "8.0.1",
