--- a/svice-frontend/svice/package.json
+++ b/svice-frontend/svice/package.json
@@ -12,7 +12,7 @@
     "node-sass": "4.12.0",
     "nouislider": "14.0.2",
     "query-string": "^6.10.1",
-    "react": "16.8.6",
+    "react": "^16.8.6",
     "react-bootstrap-switch": "15.5.3",
     "react-datetime": "2.16.3",
     "react-dom": "16.8.6",
