Poing to /app for sonar-scanning

--- a/svice-backend/sonar-project.properties
+++ b/svice-backend/sonar-project.properties
@@ -31,7 +31,7 @@ sonar.projectVersion=1.0
 sonar.language=php
 
 # Path to source directories
-sonar.sources=svice
+sonar.sources=svice/app
 
 # Exclude directories
 #sonar.test.inclusions=**/*Test*/**
