--- a/svice-backend/svice/docker-compose.yml
+++ b/svice-backend/svice/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./:/app
+      - ./:/var/www
       - ./cicd/nginx/conf.d/:/etc/nginx/conf.d/
     depends_on:
       - php-fpm
@@ -30,7 +30,7 @@ services:
     restart: unless-stopped
     tty: true
     ports:
-      - "3306:3306"
+      - "1306:3306"
     environment:
       MYSQL_DATABASE: ${DB_DATABASE}
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
@@ -47,7 +47,7 @@ services:
       dockerfile: ./cicd/php-fpm/Dockerfile
     container_name: svice-php
     volumes:
-      - ./:/app
+      - ./:/var/www
     ports:
       - "9000:9000"
     networks:
