--- a/svice-backend/svice/cicd/php-fpm/Dockerfile
+++ b/svice-backend/svice/cicd/php-fpm/Dockerfile
@@ -24,6 +24,13 @@ RUN docker-php-ext-configure gd --with-gd --with-freetype-dir=/usr/include/ --wi
 RUN docker-php-ext-install gd
 # Install composer
 RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
+
+CMD php artisan cache:clear
+CMD php artisan config:clear
+CMD php artisan migrate:refresh --seed
+CMD php artisan passport:install
+CMD php artisan key:generate
+
 # Add user for laravel application
 RUN groupadd -g 1000 www
 RUN useradd -u 1000 -ms /bin/bash -g www www
